feat: execute llms
